--- a/st-ustx2-nucleo.ioc
+++ b/st-ustx2-nucleo.ioc
@@ -36,6 +36,8 @@ FREERTOS.Tasks01=defaultTask,24,128,StartDefaultTask,Default,NULL,Dynamic,NULL,N
 FREERTOS.configUSE_NEWLIB_REENTRANT=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
+I2C1.IPParameters=OwnAddress
+I2C1.OwnAddress=0x0
 KeepUserPlacement=false
 Mcu.CPN=STM32F446RET6
 Mcu.Family=STM32F4
@@ -44,7 +46,7 @@ Mcu.IP1=FREERTOS
 Mcu.IP10=USART3
 Mcu.IP11=USB_DEVICE
 Mcu.IP12=USB_OTG_FS
-Mcu.IP2=I2C2
+Mcu.IP2=I2C1
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
 Mcu.IP5=SPI1
@@ -64,56 +66,56 @@ Mcu.Pin13=PA6
 Mcu.Pin14=PA7
 Mcu.Pin15=PC4
 Mcu.Pin16=PC5
-Mcu.Pin17=PB10
-Mcu.Pin18=PB12
-Mcu.Pin19=PB13
+Mcu.Pin17=PB12
+Mcu.Pin18=PB13
+Mcu.Pin19=PB14
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PB14
-Mcu.Pin21=PB15
-Mcu.Pin22=PC6
-Mcu.Pin23=PC7
-Mcu.Pin24=PC8
-Mcu.Pin25=PC9
-Mcu.Pin26=PA8
-Mcu.Pin27=PA9
-Mcu.Pin28=PA10
-Mcu.Pin29=PA11
+Mcu.Pin20=PB15
+Mcu.Pin21=PC6
+Mcu.Pin22=PC7
+Mcu.Pin23=PC8
+Mcu.Pin24=PC9
+Mcu.Pin25=PA8
+Mcu.Pin26=PA9
+Mcu.Pin27=PA10
+Mcu.Pin28=PA11
+Mcu.Pin29=PA12
 Mcu.Pin3=PH0-OSC_IN
-Mcu.Pin30=PA12
-Mcu.Pin31=PA13
-Mcu.Pin32=PA14
-Mcu.Pin33=PC10
-Mcu.Pin34=PC11
-Mcu.Pin35=PC12
-Mcu.Pin36=PB3
-Mcu.Pin37=PB4
-Mcu.Pin38=PB6
-Mcu.Pin39=PB7
+Mcu.Pin30=PA13
+Mcu.Pin31=PA14
+Mcu.Pin32=PC10
+Mcu.Pin33=PC11
+Mcu.Pin34=PB3
+Mcu.Pin35=PB6
+Mcu.Pin36=PB7
+Mcu.Pin37=PB8
+Mcu.Pin38=PB9
+Mcu.Pin39=VP_FREERTOS_VS_CMSIS_V2
 Mcu.Pin4=PH1-OSC_OUT
-Mcu.Pin40=PB8
-Mcu.Pin41=PB9
-Mcu.Pin42=VP_FREERTOS_VS_CMSIS_V2
-Mcu.Pin43=VP_SYS_VS_tim6
-Mcu.Pin44=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin45=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin40=VP_SYS_VS_tim6
+Mcu.Pin41=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin42=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin5=PC0
 Mcu.Pin6=PC1
 Mcu.Pin7=PC2
 Mcu.Pin8=PC3
 Mcu.Pin9=PA2
-Mcu.PinsNb=46
+Mcu.PinsNb=43
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RETx
-MxCube.Version=6.9.2
-MxDb.Version=DB.6.0.92
+MxCube.Version=6.10.0
+MxDb.Version=DB.6.0.100
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
 NVIC.DMA1_Stream5_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA1_Stream6_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
 NVIC.EXTI15_10_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.EXTI9_5_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
+NVIC.I2C1_ER_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
+NVIC.I2C1_EV_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
 NVIC.OTG_FS_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
@@ -177,10 +179,6 @@ PA8.Mode=Clock-out-1
 PA8.Signal=RCC_MCO_1
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
-PB10.GPIOParameters=GPIO_Label
-PB10.GPIO_Label=BUS0_i2c2_scl
-PB10.Mode=I2C
-PB10.Signal=I2C2_SCL
 PB12.GPIOParameters=GPIO_Label
 PB12.GPIO_Label=BUS0_cs0
 PB12.Locked=true
@@ -201,9 +199,6 @@ PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=BUS0_spi1_ck
 PB3.Mode=Full_Duplex_Master
 PB3.Signal=SPI1_SCK
-PB4.GPIOParameters=GPIO_Label
-PB4.GPIO_Label=SW_TRIGGER
-PB4.Signal=S_TIM3_CH1
 PB6.GPIOParameters=GPIO_Label
 PB6.GPIO_Label=BUS0_timch1
 PB6.Locked=true
@@ -212,14 +207,12 @@ PB7.GPIOParameters=GPIO_Label
 PB7.GPIO_Label=BUS0_timch2
 PB7.Locked=true
 PB7.Signal=GPIO_Input
-PB8.GPIOParameters=GPIO_Label
-PB8.GPIO_Label=BUS0_timch3
 PB8.Locked=true
-PB8.Signal=GPIO_Input
-PB9.GPIOParameters=GPIO_Label
-PB9.GPIO_Label=BUS0_timch4
+PB8.Mode=I2C
+PB8.Signal=I2C1_SCL
 PB9.Locked=true
-PB9.Signal=GPIO_Input
+PB9.Mode=I2C
+PB9.Signal=I2C1_SDA
 PC0.GPIOParameters=GPIO_Label
 PC0.GPIO_Label=BUS0_bit0
 PC0.Locked=true
@@ -236,10 +229,6 @@ PC11.GPIOParameters=GPIO_Label
 PC11.GPIO_Label=BUS0_uart3_rx
 PC11.Mode=Asynchronous
 PC11.Signal=USART3_RX
-PC12.GPIOParameters=GPIO_Label
-PC12.GPIO_Label=BUS0_i2c2_sda
-PC12.Mode=I2C
-PC12.Signal=I2C2_SDA
 PC13.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PC13.GPIO_Label=B1 [Blue PushButton]
 PC13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
@@ -264,25 +253,23 @@ PC4.GPIO_Label=BUS0_bit4
 PC4.Locked=true
 PC4.Signal=GPIO_Input
 PC5.GPIOParameters=GPIO_Label
-PC5.GPIO_Label=BUS0_bit5
+PC5.GPIO_Label=nESTOP
 PC5.Locked=true
-PC5.Signal=GPIO_Input
+PC5.Signal=GPXTI5
 PC6.GPIOParameters=GPIO_Label
-PC6.GPIO_Label=BUS0_bit6
+PC6.GPIO_Label=READY
 PC6.Locked=true
-PC6.Signal=GPIO_Input
+PC6.Signal=GPXTI6
 PC7.GPIOParameters=GPIO_Label
 PC7.GPIO_Label=BUS0_bit7
 PC7.Locked=true
 PC7.Signal=GPIO_Input
-PC8.GPIOParameters=GPIO_Label
-PC8.GPIO_Label=BUS0_bit8
 PC8.Locked=true
-PC8.Signal=GPIO_Input
+PC8.Signal=S_TIM3_CH3
 PC9.GPIOParameters=GPIO_Label
-PC9.GPIO_Label=BUS0_bit9
+PC9.GPIO_Label=nINTERRUPT
 PC9.Locked=true
-PC9.Signal=GPIO_Input
+PC9.Signal=GPXTI9
 PH0-OSC_IN.Locked=true
 PH0-OSC_IN.Mode=HSE-External-Oscillator
 PH0-OSC_IN.Signal=RCC_OSC_IN
@@ -320,7 +307,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,7-MX_I2C2_Init-I2C2-false-HAL-true,8-MX_SPI1_Init-SPI1-false-HAL-true,9-MX_USART1_UART_Init-USART1-false-HAL-true,10-MX_TIM3_Init-TIM3-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,7-MX_SPI1_Init-SPI1-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_TIM3_Init-TIM3-false-HAL-true,10-MX_I2C1_Init-I2C1-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -381,21 +368,26 @@ RCC.VCOSAIOutputFreq_Value=96000000
 RCC.VcooutputI2S=96000000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
-SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
-SH.S_TIM3_CH1.ConfNb=1
+SH.GPXTI5.0=GPIO_EXTI5
+SH.GPXTI5.ConfNb=1
+SH.GPXTI6.0=GPIO_EXTI6
+SH.GPXTI6.ConfNb=1
+SH.GPXTI9.0=GPIO_EXTI9
+SH.GPXTI9.ConfNb=1
+SH.S_TIM3_CH3.0=TIM3_CH3,PWM Generation3 CH3
+SH.S_TIM3_CH3.ConfNb=1
 SPI1.CalculateBaudRate=42.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
-TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM3.IPParameters=Channel-PWM Generation1 CH1,Prescaler,Period,Pulse-PWM Generation1 CH1
+TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
+TIM3.IPParameters=Prescaler,Period,Channel-PWM Generation3 CH3
 TIM3.Period=9999
 TIM3.Prescaler=839
-TIM3.Pulse-PWM\ Generation1\ CH1=10
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
-USART2.BaudRate=921600
+USART2.BaudRate=115200
 USART2.IPParameters=VirtualMode,BaudRate
 USART2.VirtualMode=VM_ASYNC
 USART3.IPParameters=VirtualMode
@@ -417,3 +409,4 @@ VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 board=NUCLEO-F446RE
 boardIOC=true
 rtos.0.ip=FREERTOS
+isbadioc=false
