added I2C scan and slave reset gpio

--- a/st-ustx2-nucleo.ioc
+++ b/st-ustx2-nucleo.ioc
@@ -248,10 +248,13 @@ PC3.GPIOParameters=GPIO_Label
 PC3.GPIO_Label=BUS0_bit3
 PC3.Locked=true
 PC3.Signal=GPIO_Input
-PC4.GPIOParameters=GPIO_Label
-PC4.GPIO_Label=BUS0_bit4
+PC4.GPIOParameters=PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PC4.GPIO_Label=nRST_SLV
+PC4.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PC4.GPIO_PuPd=GPIO_NOPULL
 PC4.Locked=true
-PC4.Signal=GPIO_Input
+PC4.PinState=GPIO_PIN_SET
+PC4.Signal=GPIO_Output
 PC5.GPIOParameters=GPIO_Label
 PC5.GPIO_Label=nESTOP
 PC5.Locked=true
