--- a/st-ustx2-nucleo.ioc
+++ b/st-ustx2-nucleo.ioc
@@ -41,20 +41,22 @@ I2C1.OwnAddress=0x0
 KeepUserPlacement=false
 Mcu.CPN=STM32F446RET6
 Mcu.Family=STM32F4
-Mcu.IP0=DMA
-Mcu.IP1=FREERTOS
-Mcu.IP10=USART3
-Mcu.IP11=USB_DEVICE
-Mcu.IP12=USB_OTG_FS
-Mcu.IP2=I2C1
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SPI1
-Mcu.IP6=SYS
-Mcu.IP7=TIM3
-Mcu.IP8=USART1
-Mcu.IP9=USART2
-Mcu.IPNb=13
+Mcu.IP0=CRC
+Mcu.IP1=DMA
+Mcu.IP10=USART1
+Mcu.IP11=USART2
+Mcu.IP12=USART3
+Mcu.IP13=USB_DEVICE
+Mcu.IP14=USB_OTG_FS
+Mcu.IP2=FREERTOS
+Mcu.IP3=I2C1
+Mcu.IP4=NVIC
+Mcu.IP5=RCC
+Mcu.IP6=SPI1
+Mcu.IP7=SYS
+Mcu.IP8=TIM3
+Mcu.IP9=TIM4
+Mcu.IPNb=15
 Mcu.Name=STM32F446R(C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC13
@@ -90,17 +92,19 @@ Mcu.Pin35=PB6
 Mcu.Pin36=PB7
 Mcu.Pin37=PB8
 Mcu.Pin38=PB9
-Mcu.Pin39=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin39=VP_CRC_VS_CRC
 Mcu.Pin4=PH1-OSC_OUT
-Mcu.Pin40=VP_SYS_VS_tim6
-Mcu.Pin41=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin42=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin40=VP_FREERTOS_VS_CMSIS_V2
+Mcu.Pin41=VP_SYS_VS_tim6
+Mcu.Pin42=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin43=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin44=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin5=PC0
 Mcu.Pin6=PC1
 Mcu.Pin7=PC2
 Mcu.Pin8=PC3
 Mcu.Pin9=PA2
-Mcu.PinsNb=43
+Mcu.PinsNb=45
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F446RETx
@@ -310,7 +314,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,7-MX_SPI1_Init-SPI1-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_TIM3_Init-TIM3-false-HAL-true,10-MX_I2C1_Init-I2C1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,7-MX_SPI1_Init-SPI1-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_TIM3_Init-TIM3-false-HAL-true,10-MX_I2C1_Init-I2C1-false-HAL-true,11-MX_CRC_Init-CRC-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -401,12 +405,16 @@ USB_DEVICE.VirtualMode-CDC_FS=Cdc
 USB_DEVICE.VirtualModeFS=Cdc_FS
 USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
+VP_CRC_VS_CRC.Mode=CRC_Activate
+VP_CRC_VS_CRC.Signal=CRC_VS_CRC
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_SYS_VS_tim6.Mode=TIM6
 VP_SYS_VS_tim6.Signal=SYS_VS_tim6
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
+VP_TIM4_VS_ClockSourceINT.Mode=Internal
+VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CDC_FS
 board=NUCLEO-F446RE
