--- a/st-ustx2-nucleo.ioc
+++ b/st-ustx2-nucleo.ioc
@@ -68,14 +68,14 @@ Mcu.Pin13=PA6
 Mcu.Pin14=PA7
 Mcu.Pin15=PC4
 Mcu.Pin16=PC5
-Mcu.Pin17=PB12
-Mcu.Pin18=PB13
-Mcu.Pin19=PB14
+Mcu.Pin17=PB0
+Mcu.Pin18=PB12
+Mcu.Pin19=PB13
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PB15
-Mcu.Pin21=PC6
-Mcu.Pin22=PC7
-Mcu.Pin23=PC8
+Mcu.Pin20=PB14
+Mcu.Pin21=PB15
+Mcu.Pin22=PC6
+Mcu.Pin23=PC7
 Mcu.Pin24=PC9
 Mcu.Pin25=PA8
 Mcu.Pin26=PA9
@@ -183,6 +183,11 @@ PA8.Mode=Clock-out-1
 PA8.Signal=RCC_MCO_1
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB0.GPIOParameters=GPIO_Speed,GPIO_PuPd
+PB0.GPIO_PuPd=GPIO_NOPULL
+PB0.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PB0.Locked=true
+PB0.Signal=S_TIM3_CH3
 PB12.GPIOParameters=GPIO_Label
 PB12.GPIO_Label=BUS0_cs0
 PB12.Locked=true
@@ -271,8 +276,6 @@ PC7.GPIOParameters=GPIO_Label
 PC7.GPIO_Label=BUS0_bit7
 PC7.Locked=true
 PC7.Signal=GPIO_Input
-PC8.Locked=true
-PC8.Signal=S_TIM3_CH3
 PC9.GPIOParameters=GPIO_Label
 PC9.GPIO_Label=nINTERRUPT
 PC9.Locked=true
@@ -314,7 +317,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,7-MX_SPI1_Init-SPI1-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_TIM3_Init-TIM3-false-HAL-true,10-MX_I2C1_Init-I2C1-false-HAL-true,11-MX_CRC_Init-CRC-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,7-MX_SPI1_Init-SPI1-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_TIM3_Init-TIM3-false-HAL-true,10-MX_I2C1_Init-I2C1-false-HAL-true,11-MX_CRC_Init-CRC-false-HAL-true,12-MX_TIM4_Init-TIM4-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -389,9 +392,10 @@ SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
 TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
-TIM3.IPParameters=Prescaler,Period,Channel-PWM Generation3 CH3
-TIM3.Period=9999
-TIM3.Prescaler=839
+TIM3.IPParameters=Prescaler,Period,Channel-PWM Generation3 CH3,Pulse-PWM Generation3 CH3
+TIM3.Period=499
+TIM3.Prescaler=167
+TIM3.Pulse-PWM\ Generation3\ CH3=10
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 USART2.BaudRate=115200
