added pin name for trigger

--- a/st-ustx2-nucleo.ioc
+++ b/st-ustx2-nucleo.ioc
@@ -183,7 +183,8 @@ PA8.Mode=Clock-out-1
 PA8.Signal=RCC_MCO_1
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
-PB0.GPIOParameters=GPIO_Speed,GPIO_PuPd
+PB0.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label
+PB0.GPIO_Label=Trigger
 PB0.GPIO_PuPd=GPIO_NOPULL
 PB0.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB0.Locked=true
