--- a/st-ustx2-nucleo.ioc
+++ b/st-ustx2-nucleo.ioc
@@ -4,7 +4,29 @@ CAD.pinconfig=
 CAD.provider=
 Dma.Request0=USART2_TX
 Dma.Request1=USART2_RX
-Dma.RequestsNb=2
+Dma.Request2=USART1_TX
+Dma.Request3=USART1_RX
+Dma.RequestsNb=4
+Dma.USART1_RX.3.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART1_RX.3.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART1_RX.3.Instance=DMA2_Stream2
+Dma.USART1_RX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART1_RX.3.MemInc=DMA_MINC_ENABLE
+Dma.USART1_RX.3.Mode=DMA_NORMAL
+Dma.USART1_RX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART1_RX.3.PeriphInc=DMA_PINC_DISABLE
+Dma.USART1_RX.3.Priority=DMA_PRIORITY_MEDIUM
+Dma.USART1_RX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART1_TX.2.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART1_TX.2.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART1_TX.2.Instance=DMA2_Stream7
+Dma.USART1_TX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART1_TX.2.MemInc=DMA_MINC_ENABLE
+Dma.USART1_TX.2.Mode=DMA_NORMAL
+Dma.USART1_TX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART1_TX.2.PeriphInc=DMA_PINC_DISABLE
+Dma.USART1_TX.2.Priority=DMA_PRIORITY_MEDIUM
+Dma.USART1_TX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.USART2_RX.1.Direction=DMA_PERIPH_TO_MEMORY
 Dma.USART2_RX.1.FIFOMode=DMA_FIFOMODE_ENABLE
 Dma.USART2_RX.1.FIFOThreshold=DMA_FIFO_THRESHOLD_HALFFULL
@@ -113,6 +135,8 @@ MxDb.Version=DB.6.0.100
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
 NVIC.DMA1_Stream5_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DMA1_Stream6_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.DMA2_Stream2_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
+NVIC.DMA2_Stream7_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
 NVIC.EXTI15_10_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.EXTI9_5_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
@@ -133,6 +157,7 @@ NVIC.SysTick_IRQn=true\:15\:0\:true\:false\:false\:true\:true\:true\:false
 NVIC.TIM6_DAC_IRQn=true\:5\:0\:false\:false\:true\:false\:false\:true\:true
 NVIC.TimeBase=TIM6_DAC_IRQn
 NVIC.TimeBaseIP=TIM6
+NVIC.USART1_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.USART2_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false\:false
 PA10.Mode=Asynchronous
@@ -397,7 +422,8 @@ TIM3.IPParameters=Prescaler,Period,Channel-PWM Generation3 CH3,Pulse-PWM Generat
 TIM3.Period=499
 TIM3.Prescaler=167
 TIM3.Pulse-PWM\ Generation3\ CH3=10
-USART1.IPParameters=VirtualMode
+USART1.BaudRate=921600
+USART1.IPParameters=VirtualMode,BaudRate
 USART1.VirtualMode=VM_ASYNC
 USART2.BaudRate=115200
 USART2.IPParameters=VirtualMode,BaudRate
